Bug #51861  	my_rename on windows: check that "from" exists